[experimental] handlebars downgrade to java 11